--- a/fakeStore/src/app/components/navbar/navbar.component.html
+++ b/fakeStore/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,4 @@
-<p>navbar works!</p>
+<div class="d-flex">
+    <a routerLink="/home" class="mx-2 px-2">Home</a>
+    <a routerLink="/shop" class="mx-2 px-2">Shop</a>
+</div>
