--- a/fakeStore/src/styles.scss
+++ b/fakeStore/src/styles.scss
@@ -2,3 +2,13 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+$dark-blue: #131842;
+$orange: #E68369;
+$coffee: #ECCEAE;
+$beige: #FBF6E2;
+
+a {
+    text-decoration: none;
+    color: black;
+}
