--- a/fakeStore/src/app/pages/shop/shop-list/shop-list.component.html
+++ b/fakeStore/src/app/pages/shop/shop-list/shop-list.component.html
@@ -1,5 +1,6 @@
 <div class="container list-container">
-    <div class="list-header d-flex p-2 justify-content-end">
+    <div class="list-header d-flex p-2 justify-content-between align-items-center">
+        <app-search-bar></app-search-bar>
         <button (click)="addProduct()" class="btn btn-primary">Add product</button>
     </div>
     <div class="table-wrapper">
